--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -247,3 +247,26 @@ body{
         display: block;
     }
 }
+
+
+/*정사각형 이미지*/
+.square-image {
+    position: relative;
+    overflow: hidden;
+    padding-bottom: 100%;
+}
+
+.square-image img {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+}
+
+/* 끝 */
