--- a/src/main/resources/templates/admin/content/pages/notice/list.html
+++ b/src/main/resources/templates/admin/content/pages/notice/list.html
@@ -127,13 +127,13 @@
 				<td>
 					<a id="detailBtn" th:href="@{/notice/{id}(id=${notice.id})}">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-						     class="bi bi-search" viewBox="0 0 16 16">
+						     class="bi bi-search text-decoration-none" viewBox="0 0 16 16">
 							<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 						</svg>
 					</a>
 				</td>
 				<td>
-					<a th:href="@{/admin/notice/remove(id=${notice.id})}"
+					<a th:href="@{/admin/notice/remove.do(id=${notice.id})}"
 					   th:attr="onclick=|return confirm('정말 삭제 하시겠습니까?')|" style="text-decoration: none; color:black">
 						<svg width="16" height="16" viewBox="-32 0 512 512" xmlns="http://www.w3.org/2000/svg">
 							<path d="M268 416h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12zM432 80h-82.41l-34-56.7A48 48 0 0 0 274.41 0H173.59a48 48 0 0 0-41.16 23.3L98.41 80H16A16 16 0 0 0 0 96v16a16 16 0 0 0 16 16h16v336a48 48 0 0 0 48 48h288a48 48 0 0 0 48-48V128h16a16 16 0 0 0 16-16V96a16 16 0 0 0-16-16zM171.84 50.91A6 6 0 0 1 177 48h94a6 6 0 0 1 5.15 2.91L293.61 80H154.39zM368 464H80V128h288zm-212-48h24a12 12 0 0 0 12-12V188a12 12 0 0 0-12-12h-24a12 12 0 0 0-12 12v216a12 12 0 0 0 12 12z"/>
