--- a/src/main/resources/templates/user/layout/mypage_layout.html
+++ b/src/main/resources/templates/user/layout/mypage_layout.html
@@ -150,6 +150,8 @@
 <script th:src="@{/user/assets/js/jquery.elevatezoom.js}"></script>
 <!-- scripts js -->
 <script th:src="@{/user/assets/js/scripts.js}"></script>
+<script th:src="@{/user/assets/js/toastr.min.js}"></script>
+<script th:src="@{/user/assets/js/jquery-loading.js}"></script>
 </body>
 
 <footer th:replace="~{/user/fragments/footer :: footerFragment}"></footer>
