todo: 인포윈도우는 하나밖에 안열려서 오버레이방식으로 변경해야함.

--- a/src/main/resources/templates/user/content/pages/product/detail.html
+++ b/src/main/resources/templates/user/content/pages/product/detail.html
@@ -15,7 +15,7 @@
 	</style>
 
 	<script>
-		function dip(productId){
+/*		function dip(productId){
 			// ajax /dib/product/productId
             let dibButton = $('#dipBtn');
             let heartIcon = $('.icon-heart');
@@ -59,7 +59,7 @@
                 }
             });
 
-		}
+		}*/
 	</script>
 
 	<!-- START SECTION SHOP -->
