--- a/src/main/resources/templates/user/layout/mypage_layout.html
+++ b/src/main/resources/templates/user/layout/mypage_layout.html
@@ -152,6 +152,8 @@
 <script th:src="@{/user/assets/js/scripts.js}"></script>
 <script th:src="@{/user/assets/js/toastr.min.js}"></script>
 <script th:src="@{/user/assets/js/jquery-loading.js}"></script>
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
 </body>
 
 <footer th:replace="~{/user/fragments/footer :: footerFragment}"></footer>
