--- a/src/main/resources/templates/user/layout/default_layout.html
+++ b/src/main/resources/templates/user/layout/default_layout.html
@@ -82,6 +82,9 @@
 <script th:src="@{/user/assets/js/scripts.js}"></script>
 <script th:src="@{/user/assets/js/toastr.min.js}"></script>
 <script th:src="@{/user/assets/js/jquery-loading.js}"></script>
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://unpkg.com/tippy.js@6"></script>
+<script th:src="@{/user/assets/js/global-tooltip.js}"></script>
 
 </body>
 
