--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -113,18 +113,18 @@
 
 				<div class="card" th:each="feed: ${clothes_category}">
 					<div class="img-container43">
-						<img th:src="'/file/' + *{feed.feed.getThumbnailFileName()}" class="card-img-top rounded"
+						<img th:src="'/file/' + *{feed.getThumbnailFileName()}" class="card-img-top rounded"
 						     alt="피드 썸네일 이미지">
 					</div>
 					<div class="card-body">
-						<h5 class="card-title" th:text="${feed.feed.title}"></h5>
+						<h5 class="card-title" th:text="${feed.title}"></h5>
 						<th:block>
-							<p class="card-text" th:text="${feed.feed.description}">
+							<p class="card-text" th:text="${feed.description}">
 								<!--						   th:inline="text">-->
 								<!--							[[${#strings.abbreviate(feed.feed.description, 40)}]]-->
 							</p>
 						</th:block>
-						<a th:href="'/feed/' + *{feed.feed.id}" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
+						<a th:href="'/feed/' + *{feed.id}" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
 					</div>
 				</div>
 			</div>
