--- a/src/main/resources/templates/admin/content/pages/contents/list.html
+++ b/src/main/resources/templates/admin/content/pages/contents/list.html
@@ -45,6 +45,8 @@
 			<tr>
 				<th style="width:5%"> #</th>
 				<th>제목</th>
+				<th>카테고리</th>
+				<th>조회수</th>
 				<th style="width:10%" data-sortable="">작성일</th>
 				<th style="width:3%"></th>
 				<th style="width:3%"></th>
@@ -55,6 +57,8 @@
 			<tr th:each="content : ${contents}">
 				<td th:text="${content.id}"></td>
 				<td th:text="${content.title}"></td>
+				<td th:text="${content.category}"></td>
+				<td th:text="${content.hit}"></td>
 				<td th:text="${#temporals.format(content.createdAt, 'yyyy년 MM월 dd일 HH시 mm분')}"></td>
 				<!--				<td th:text="${content.description}"></td>-->
 				<!--				<td th:text="${product.description}"></td>-->
