--- a/src/main/resources/templates/user/fragments/header.html
+++ b/src/main/resources/templates/user/fragments/header.html
@@ -82,7 +82,7 @@
 
             let headerTag = $(".header_wrap");
 
-            headerTag.css('background-color', "rgb(0, 25, 91)");
+            headerTag.css('background-color', "#001c63");
             // enable light logo
             headerTag.find(".logo_light").css('display', "block");
             headerTag.find(".logo_dark").css('display', "none");
@@ -120,7 +120,7 @@
                     headerTag.find(".nav_item").css('color', "black");
 
                 } else {
-                    headerTag.css('background-color', "rgb(0, 25, 91)");
+                    headerTag.css('background-color', "#001c63");
                     // enable light logo
                     headerTag.find(".logo_light").css('display', "block");
                     headerTag.find(".logo_dark").css('display', "none");
@@ -142,8 +142,8 @@
 			<nav class="navbar navbar-expand-lg">
 				<a class="navbar-brand me-md-5 me-0" href="/">
 					<!-- 182 x 72 logo -->
-					<img class="logo_light" th:src="@{/user/assets/images/logo_light.png}" alt="logo"/>
-					<img class="logo_dark" th:src="@{/user/assets/images/logo_dark.png}" alt="logo"/>
+					<img class="logo_light" th:src="@{/user/assets/images/logo_light.png}" alt="logo" width="120"/>
+					<img class="logo_dark" th:src="@{/user/assets/images/logo_dark.png}" alt="logo" width="120"/>
 				</a>
 
 				<!--        <button class="navbar-button">-->
