편집숍 리스트 마커 제거 구현

--- a/src/main/resources/templates/user/content/pages/shop-list.html
+++ b/src/main/resources/templates/user/content/pages/shop-list.html
@@ -320,6 +320,8 @@
                                 });
 
                                 function search() {
+
+                                    removeAllMarker();
                                     // ajax
                                     $.ajax({
                                         url: '/shop-list/search.do',
