--- a/src/main/resources/templates/user/content/pages/feed/read.html
+++ b/src/main/resources/templates/user/content/pages/feed/read.html
@@ -12,6 +12,10 @@
             height: 100%;
         }
 
+        .feed_section img {
+            width: 100%;
+        }
+
         .text-on-image {
             position: absolute;
             top: 50%;
@@ -163,49 +167,22 @@
 		</div>
 	</div>
 
-	<div id="related_section" class="mb-4">
+	<div id="related_section" class="mb-4" th:if="${relatedFeedList.size() > 0 }">
 		<div class="container">
 			<h3>유사한 피드</h3>
 			<hr/>
 
 			<div class="card-group d-flex flex-wrap p-3">
-				<div class="card">
+				<div class="card" th:each="relatedFeed : ${relatedFeedList}">
 					<div class="img-container43">
-						<img th:src="@{/user/assets/images/banner8.jpg}" class="card-img-top rounded"
+						<img th:src="'/file/' + ${relatedFeed.thumbnailFileName}" class="card-img-top rounded"
 						     alt="your-image-alt">
 					</div>
 					<div class="card-body">
-						<h5 class="card-title">컨텐츠 타이틀</h5>
-						<p class="card-text">모든 국민은 직업선택의 자유를 가진다. 이 헌법시행 당시에 이 헌법에 의하여 새로 설치될 기관의 권한에 속하는 직무를 행하고 있는
-							기관은 이 헌법에 의하여 새로운 기관이 설치될 때까지 존속하며 그 직무를 행한다.</p>
-						<a href="#" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="img-container43">
-						<img th:src="@{/user/assets/images/banner9.jpg}" class="card-img-top rounded"
-						     alt="your-image-alt">
-					</div>
-					<div class="card-body">
-						<h5 class="card-title">컨텐츠 타이틀</h5>
-						<p class="card-text">모든 국민은 직업선택의 자유를 가진다. 이 헌법시행 당시에 이 헌법에 의하여 새로 설치될 기관의 권한에 속하는 직무를 행하고
-							있는
-							기관은 이 헌법에 의하여 새로운 기관이 설치될 때까지 존속하며 그 직무를 행한다.</p>
-						<a href="#" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="img-container43">
-						<img th:src="@{/user/assets/images/banner7.jpg}" class="card-img-top rounded"
-						     alt="your-image-alt">
-					</div>
-					<div class="card-body">
-						<h5 class="card-title">컨텐츠 타이틀</h5>
-						<p class="card-text">모든 국민은 직업선택의 자유를 가진다. 이 헌법시행 당시에 이 헌법에 의하여 새로 설치될 기관의 권한에 속하는 직무를 행하고 있는
-							기관은 이 헌법에 의하여 새로운 기관이 설치될 때까지 존속하며 그 직무를 행한다.</p>
-						<a href="#" class="btn btn-primary btn-more rounded-pill">더 알아보기</a>
+						<h5 class="card-title" th:text="${relatedFeed.title}"></h5>
+						<p class="card-text" th:text="${relatedFeed.description}"></p>
+						<a th:href="'/feed/' + ${relatedFeed.id}" class="btn btn-primary btn-more rounded-pill">더
+							알아보기</a>
 					</div>
 				</div>
 			</div>
